--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   database: blog_development
   pool: 5
   username: rubyblogadmin 
-  password: Velez12$
+  password: ruby12 
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -28,7 +28,7 @@ test:
   database: blog_test
   pool: 5
   username: rubyblogadmin
-  password: Velez12$
+  password: ruby12 
   socket: /var/run/mysqld/mysqld.sock
 
 production:
@@ -38,5 +38,5 @@ production:
   database: blog_production
   pool: 5
   username: rubyblogadmin
-  password: Velez12$
+  password: ruby12
   socket: /var/run/mysqld/mysqld.sock
